--- a/ACL4SSR_Mini_MultiMode.ini
+++ b/ACL4SSR_Mini_MultiMode.ini
@@ -14,6 +14,9 @@ ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,cloudflare.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,cloudflare.dev
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,workers.dev
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,pages.dev
+ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,r2s.381661.xyz
+ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,r5s.381661.xyz
+ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,mt3000.381661.xyz
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanAD.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanProgramAD.list
