--- a/test.ini
+++ b/test.ini
@@ -18,6 +18,7 @@ ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,r2s.381661.xyz
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,r5s.381661.xyz
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,mt3000.381661.xyz
 ruleset=🤖 智能网络,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
+ruleset=📺 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanAD.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanProgramAD.list
@@ -35,6 +36,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🤖 智能网络`select`.*
+custom_proxy_group=📺 国外媒体`select`.*
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
