--- a/test.ini
+++ b/test.ini
@@ -30,7 +30,7 @@ ruleset=🚀 节点选择,rules/ACL4SSR/Clash/ProxyLite.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaCompanyIp.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
-ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]DIRECT`.*
