--- a/ACL4SSR/ACL4SSR_Mini_MultiMode.ini
+++ b/ACL4SSR/ACL4SSR_Mini_MultiMode.ini
@@ -17,6 +17,7 @@ ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,pages.dev
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,r2s.381661.xyz
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,r5s.381661.xyz
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,mt3000.381661.xyz
+ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,5dmoviehub.com
 ruleset=🤖 智能网络,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
 ruleset=📺 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
